Fixed red light mode contrast area

--- a/src/view/App.css
+++ b/src/view/App.css
@@ -29,7 +29,7 @@ body{
   background-color: white;
 }
 .red{
-  background-color: rgb(225, 18, 18);
+  background-color: rgb(230, 56, 56);
 }
 .orange{
   background-color: rgb(255, 144, 47);
